[package]
name = "path-kit"
version = "0.1.0"
edition = "2024"
authors = ["songhuaixu <songhuaixu@gmail.com>"]
description = "Rust path operations library based on Skia PathOps and PathKit - union, intersect, simplify, stroke, RRect"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/songhuaixu/path-kit"
keywords = ["path", "skia", "vector", "graphics", "boolean"]
categories = ["graphics", "mathematics"]

[dependencies]

[build-dependencies]
cc = "1"
bindgen = "0.72"
glob = "0.3"
