[package]
name = "path-kit"
version = "0.4.0"
edition = "2024"
authors = ["songhuaixu <songhuaixu@gmail.com>"]
description = "Rust path operations library based on Skia PathOps and PathKit - union, intersect, simplify, stroke, RRect"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/songhuaixu/path-kit"
documentation = "https://docs.rs/path-kit"
homepage = "https://github.com/songhuaixu/path-kit/blob/master/CHANGELOG.md"
keywords = ["path", "skia", "vector", "graphics", "boolean"]
categories = ["graphics", "mathematics"]

[dependencies]
cxx = "1"

[build-dependencies]
cxx-build = "1"
glob = "0.3"
